Imagen y titulo del estadio metropolitano

--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAGINA WEB</title>
+    <title>IMAGEN DEL ESTADIO METROPOLITANO DE BARRANQUILLA</title>
 </head>
 <body>
-    <h1>Primera linea</h1>
-    <h1>Segunda linea</h1>
-    <h1>Tercera linea</h1>
-    <h1>Cuarta linea</h1>
-    <h1>Quinta linea</h1>
-    <h1>Sexta linea</h1>
+    <center>
+        <h1>METROPOLITANO ROBERTO MELENDEZ DE BARRANQUILLA</h1>
+        <img src="https://www.futbolred.com/files/article_main/files/crop/uploads/2019/04/08/5cabb6796d7d6.r_1589230801490.0-164-4000-2162.jpeg" alt="">
+    </center>
 </body>
 </html>
